ci: release please

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "velcure-ui",
+  "name": "@velcure/ui",
   "version": "1.0.0",
   "description": "Velcure UI Component Library",
   "author": {
