--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -19,14 +19,15 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: node
           package-name: '@velcure/ui'
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
+          registry-url: 'https://registry.npmjs.org'
       - run: npm install npm@latest -g
       - run: npm ci
       - run: npm run build
-      - run: npm publish
+      - run: npm publish -access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         if: ${{ steps.release.outputs.release_created }}
