--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@velcure/ui",
   "version": "1.0.0",
   "description": "Velcure UI Component Library",
+  "private": false,
   "author": {
     "name": "Julian Koehn"
   },
