--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": {
     "name": "Julian Koehn"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "Apache-2.0",
   "size-limit": [
     {
