--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@zag-js/focus-visible": "^0.21.0",
     "class-variance-authority": "^0.7.0",
     "cx": "^23.9.0",
