--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-styling": "^1.3.7",
     "@storybook/blocks": "^7.4.2",
+    "@storybook/manager-api": "^7.4.3",
     "@storybook/react": "^7.4.2",
     "@storybook/react-webpack5": "^7.4.2",
     "@storybook/testing-library": "^0.2.1",
+    "@storybook/theming": "^7.4.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.15",
