--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
     "@size-limit/preset-big-lib": "^9.0.0",
+    "@storybook/addon-a11y": "^7.4.4",
     "@storybook/addon-essentials": "^7.4.2",
     "@storybook/addon-interactions": "^7.4.2",
     "@storybook/addon-links": "^7.4.2",
