--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "@storybook/addon-essentials": "^7.4.4",
     "@storybook/addon-interactions": "^7.4.4",
     "@storybook/addon-links": "^7.4.4",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/addon-styling-webpack": "^0.0.4",
     "@storybook/blocks": "^7.4.4",
     "@storybook/manager-api": "^7.4.4",
     "@storybook/react": "^7.4.4",
@@ -60,13 +59,16 @@
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.15",
     "chromatic": "^7.2.0",
+    "css-loader": "^6.8.1",
     "postcss": "^8.4.30",
+    "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-frame-component": "^5.2.6",
     "react-icons": "^4.11.0",
     "size-limit": "^9.0.0",
     "storybook": "^7.4.4",
+    "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "tsup": "^7.2.0",
