--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@zag-js/element-size": "^0.21.0",
     "@zag-js/focus-visible": "^0.21.0",
     "aria-hidden": "^1.2.3",
     "class-variance-authority": "^0.7.0",
