feat: nav switcher + improved tw

--- a/.babelrc.json
+++ b/.babelrc.json
@@ -11,7 +11,12 @@
         }
       }
     ],
-    "@babel/preset-typescript",
+    [
+      "@babel/preset-typescript",
+      {
+        "allowDeclareFields": true
+      }
+    ],
     "@babel/preset-react"
   ],
   "plugins": []
