--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
     "@size-limit/preset-big-lib": "^9.0.0",
-    "@storybook/addon-a11y": "^7.4.4",
+    "@storybook/addon-a11y": "^7.4.5",
     "@storybook/addon-essentials": "^7.4.4",
     "@storybook/addon-interactions": "^7.4.4",
     "@storybook/addon-links": "^7.4.4",
@@ -89,6 +89,9 @@
     "@popperjs/core": "^2.11.8",
     "@zag-js/element-size": "^0.21.0",
     "@zag-js/focus-visible": "^0.21.0",
+    "@zag-js/number-input": "^0.22.0",
+    "@zag-js/react": "^0.22.0",
+    "@zag-js/types": "^0.22.0",
     "aria-hidden": "^1.2.3",
     "class-variance-authority": "^0.7.0",
     "cx": "^23.9.0",
