--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@zag-js/focus-visible": "^0.21.0",
     "@zag-js/number-input": "^0.22.0",
     "@zag-js/react": "^0.22.0",
+    "@zag-js/switch": "^0.22.0",
     "@zag-js/types": "^0.22.0",
     "aria-hidden": "^1.2.3",
     "class-variance-authority": "^0.7.0",
