--- a/package.json
+++ b/package.json
@@ -91,13 +91,13 @@
     "@zag-js/focus-visible": "^0.21.0",
     "@zag-js/number-input": "^0.22.0",
     "@zag-js/react": "^0.22.0",
-    "@zag-js/switch": "^0.22.0",
     "@zag-js/types": "^0.22.0",
     "aria-hidden": "^1.2.3",
     "class-variance-authority": "^0.7.0",
     "cx": "^23.9.0",
     "dayjs": "^1.11.10",
     "react-focus-lock": "^2.9.5",
+    "react-hook-form": "^7.46.2",
     "react-remove-scroll": "^2.5.6",
     "tailwind-merge": "^1.14.0"
   },
