--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
+    "@hookform/resolvers": "^3.3.1",
     "@size-limit/preset-big-lib": "^9.0.0",
     "@storybook/addon-a11y": "^7.4.5",
     "@storybook/addon-essentials": "^7.4.4",
@@ -83,7 +84,9 @@
     "tailwindcss": "^3.3.3",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "tsup": "^7.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "yup": "^1.3.1",
+    "zod": "^3.22.2"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
