--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
       "types": "./dist/blocks/index.d.ts",
       "import": "./dist/blocks/index.mjs",
       "require": "./dist/blocks/index.js"
+    },
+    "./rhf": {
+      "types": "./dist/rhf/index.d.ts",
+      "import": "./dist/rhf/index.mjs",
+      "require": "./dist/rhf/index.js"
     }
   },
   "devDependencies": {
