fix: scheduler showcase

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,32 @@
 {
   "include": ["src/**/*"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
-    "target": "ES2016",
-    "lib": ["ESNext", "DOM"],
-    "jsx": "react-jsx",
-    "module": "ESNext",
+    "target": "esnext",
+    "module": "esnext",
     "moduleResolution": "node",
+    "lib": ["esnext", "dom", "dom.iterable"],
     "declaration": true,
+    "sourceMap": true,
+    "skipLibCheck": true,
+    "jsx": "react-jsx",
+    "isolatedModules": true,
+    "noFallthroughCasesInSwitch": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "downlevelIteration": true,
     "declarationMap": true,
     "outDir": "./dist",
     "noEmit": true,
     "noEmitHelpers": true,
-    "esModuleInterop": true,
+    "importHelpers": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
     "rootDir": "./src",
     "baseUrl": "./src",
     "paths": {
