--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     }
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config jest.config.ts",
     "lint": "tsc",
     "build": "tsup && size-limit",
     "storybook": "storybook dev -p 6006",
@@ -71,11 +71,18 @@
     "@storybook/react-webpack5": "^7.4.4",
     "@storybook/testing-library": "^0.2.1",
     "@storybook/theming": "^7.4.4",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.5",
+    "@types/jest-axe": "^3.5.6",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.15",
     "chromatic": "^7.2.0",
     "css-loader": "^6.8.1",
+    "jest": "^29.7.0",
+    "jest-axe": "^8.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.30",
     "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
@@ -87,6 +94,8 @@
     "storybook": "^7.4.4",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2",
@@ -94,11 +103,16 @@
     "zod": "^3.22.2"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/react": "^6.1.9",
+    "@fullcalendar/resource": "^6.1.9",
+    "@fullcalendar/resource-timeline": "^6.1.9",
     "@popperjs/core": "^2.11.8",
     "@zag-js/element-size": "^0.21.0",
     "@zag-js/focus-visible": "^0.21.0",
     "@zag-js/number-input": "^0.22.0",
     "@zag-js/react": "^0.22.0",
+    "@zag-js/splitter": "^0.22.0",
     "@zag-js/types": "^0.22.0",
     "aria-hidden": "^1.2.3",
     "class-variance-authority": "^0.7.0",
