--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "color2k": "^2.0.2",
     "cx": "^23.9.0",
     "dayjs": "^1.11.10",
+    "downshift": "^8.2.2",
     "react-focus-lock": "^2.9.5",
     "react-hook-form": "^7.46.2",
     "react-remove-scroll": "^2.5.6",
