--- a/package.json
+++ b/package.json
@@ -116,10 +116,10 @@
     "@zag-js/types": "^0.22.0",
     "aria-hidden": "^1.2.3",
     "class-variance-authority": "^0.7.0",
-    "color2k": "^2.0.2",
     "cx": "^23.9.0",
     "dayjs": "^1.11.10",
     "downshift": "^8.2.2",
+    "polished": "^4.2.2",
     "react-focus-lock": "^2.9.5",
     "react-hook-form": "^7.46.2",
     "react-remove-scroll": "^2.5.6",
